# spectral-fingerprints

./: README.md  pyproject.toml
nomad_dos_fingerprints/: DOSfingerprint.py  grid.py
profiling/: profiling_calculate_similarity.py
src/spectral_fingerprints/: __init__.py  fingerprint.py  plotting.py  similarity.py
tests/: test_DOSfingerprint.py  test_Grid.py  test_fingerprint.py  test_functional.py  test_similarity.py
timing/: profiling_calculate_similarity.py  profiling_fingerprint_generation.py
