[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="spectral_fingerprints"
version="2.1.1"
description = "Binary-valued fingerprints for describing spectral properties."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name="Martin Kuban et al."}
]
maintainers = [
    {name="Martin Kuban", email="kuban@physik.hu-berlin.de"}
]
requires-python = ">= 3.10"
dependencies = [
    "numpy >= 1.22.2",
    "bitarray == 2.4.1",
    "matplotlib",
    "scipy"
]
license ="Apache-2.0"

[project.optional-dependencies]
tests = ['pytest']

[project.urls]
Repository = "https://github.com/kubanmar/spectral-fingerprints"

[tool.setuptools.packages.find]
where=["src"]
include=["spectral_fingerprints"]
exclude=["tests"]
